--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,18 @@ body {
 }
 
 .container {
-  max-width: 1400px;
+  max-width: auto;
   margin: 0 auto;
+}
+
+.grid{
+display: grid;
+grid-template-columns: 1fr 2fr 2fr;
+}
+
+section {
+  max-width: 1200px;
+  margin: auto 0;
 }
 
 header {
@@ -56,6 +66,46 @@ header a {
   background: white;
 }
 
+footer {
+  color: white;
+  background-image: linear-gradient(rgba(39,32,68,0.8),rgba(39,32,68,0.8)), url("../images/tokyo-city.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding:100px;
+}
+
+footer h3 {
+  font-weight:700;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+footer p {
+  font-weight:400;
+  font-size:14px;
+  opacity:0.7;
+  margin-right: 20px;
+  line-height: 24px;
+}
+
+footer ul {
+  padding:0;
+  margin-right:20px;
+  line-height: 24px;
+}
+
+footer li {
+  list-style: none;
+  font-size:14px;
+  margin:0;
+  padding:0;
+}
+
+footer a {
+  color:white;
+  opacity:0.7;
+}
+
 @media (max-width: 1000px) {
   header {
     padding: 60px 0;
@@ -72,4 +122,5 @@ header a {
   header h3 {
     font-size: 12px;
   }
+
 }
