--- a/src/styles.css
+++ b/src/styles.css
@@ -4,18 +4,63 @@ body {
 }
 
 .container {
-  max-width: auto;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
-.grid{
-display: grid;
-grid-template-columns: 1fr 2fr 2fr;
+.grid {
+  display: grid;
+  grid-gap: 64px;
+}
+
+.grid-2-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid-3-columns-first-narrow {
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+.img-responsive {
+  max-width: 100%;
 }
 
 section {
   max-width: 1200px;
-  margin: auto 0;
+  margin:  0 auto;
+  padding: 100px 0;
+}
+
+main {
+  background-color: white;
+}
+
+main h3 {
+  font-weight: 700px;
+  font-size:16px;
+  line-height: 1.5;
+  color: #272044;
+  margin:0;
+}
+
+main h2{
+  font-weight: 700px;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
+}
+
+main p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272004;
+  opacity: 0.7;
 }
 
 header {
@@ -68,42 +113,44 @@ header a {
 
 footer {
   color: white;
-  background-image: linear-gradient(rgba(39,32,68,0.8),rgba(39,32,68,0.8)), url("../images/tokyo-city.png");
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.8),
+      rgba(39, 32, 68, 0.8)
+    ),
+    url("../images/tokyo-city.png");
   background-repeat: no-repeat;
   background-size: cover;
-  padding:100px;
+  padding: 100px;
 }
 
 footer h3 {
-  font-weight:700;
+  font-weight: 700;
   font-size: 20px;
   line-height: 30px;
 }
 
 footer p {
-  font-weight:400;
-  font-size:14px;
-  opacity:0.7;
-  margin-right: 20px;
+  font-weight: 400;
+  font-size: 14px;
+  opacity: 0.7;
   line-height: 24px;
 }
 
 footer ul {
-  padding:0;
-  margin-right:20px;
+  padding: 0;
   line-height: 24px;
 }
 
 footer li {
   list-style: none;
-  font-size:14px;
-  margin:0;
-  padding:0;
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
 }
 
 footer a {
-  color:white;
-  opacity:0.7;
+  color: white;
+  opacity: 0.7;
 }
 
 @media (max-width: 1000px) {
@@ -123,4 +170,12 @@ footer a {
     font-size: 12px;
   }
 
+  .grid {
+    grid-template-columns:1fr;
+    grid-gap: 32px;
+  }
+
+  section {
+    padding:30px;
+  }
 }
