--- a/src/styles.css
+++ b/src/styles.css
@@ -17,33 +17,73 @@ body {
   grid-template-columns: 1fr 1fr;
 }
 
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .grid-3-columns-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.card {
+  background-color: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 32px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
+.btn {
+  display: block;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  padding: 16px;
+  background-color: #462cb3;
+  text-decoration: none;
+}
+
 .img-responsive {
   max-width: 100%;
+  display: block;
 }
 
 section {
-  max-width: 1200px;
-  margin:  0 auto;
-  padding: 100px 0;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 100px;
+}
+
+section.secondary {
+  background-color: #f8f8f8;
 }
 
 main {
   background-color: white;
 }
 
-main h3 {
-  font-weight: 700px;
-  font-size:16px;
-  line-height: 1.5;
-  color: #272044;
-  margin:0;
+.text-center {
+  text-align: center;
 }
 
-main h2{
+main h3 {
+  font-weight: 700px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+}
+
+main h2 {
   font-weight: 700px;
   font-size: 16px;
   line-height: 1.5;
@@ -52,6 +92,22 @@ main h2{
   color: #272044;
   opacity: 0.3;
   text-transform: uppercase;
+}
+
+main h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height:1;
+  color: #272044;
+  margin:0;
+}
+
+main h5 {
+  font-weight:700;
+  font-size: 13px;
+  line-height:1;
+  margin:0;
+  color: #272044;
 }
 
 main p {
@@ -171,11 +227,11 @@ footer a {
   }
 
   .grid {
-    grid-template-columns:1fr;
+    grid-template-columns: 1fr;
     grid-gap: 32px;
   }
 
   section {
-    padding:30px;
+    padding: 30px;
   }
 }
