--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,15 @@ body {
   margin: 30px 0;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio:1/1;
+}
+
+.card-header.grid {
+  grid-gap:0;
+}
+
 .card-body {
   padding: 32px;
 }
@@ -53,7 +62,7 @@ body {
 }
 
 .img-responsive {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 
@@ -233,5 +242,13 @@ footer a {
 
   section {
     padding: 30px;
+  }
+
+  .card-header img {
+    display:none;
+  }
+
+  .embed {
+    aspect-ratio: 16/9;
   }
 }
